@@ -13,7 +13,10 @@ import static uk.gov.hmcts.reform.bailcaseapi.domain.entities.ccd.State.APPLICAT
 
 import java.util.List;
 import java.util.Optional;
+
 import org.junit.jupiter.api.Test;
+import org.springframework.boot.autoconfigure.EnableAutoConfiguration;
+import org.springframework.boot.autoconfigure.cache.CacheAutoConfiguration;
 import org.springframework.security.test.context.support.WithMockUser;
 
 import uk.gov.hmcts.reform.bailcaseapi.component.testutils.SpringBootIntegrationTest;
@@ -23,6 +26,7 @@ import uk.gov.hmcts.reform.bailcaseapi.component.testutils.fixtures.PreSubmitCal
 import uk.gov.hmcts.reform.bailcaseapi.domain.entities.CaseNote;
 import uk.gov.hmcts.reform.bailcaseapi.domain.entities.ccd.field.IdValue;
 
+@EnableAutoConfiguration(exclude = {CacheAutoConfiguration.class})
 class AddCaseNoteTest extends SpringBootIntegrationTest implements WithUserDetailsStub {
 
     @Test
@@ -43,7 +47,7 @@ class AddCaseNoteTest extends SpringBootIntegrationTest implements WithUserDetai
 
         Optional<List<IdValue<CaseNote>>> caseNotes = response.getBailCase().read(CASE_NOTES);
 
-        CaseNote caseNote = caseNotes.get().get(0).getValue();
+        CaseNote caseNote = caseNotes.get().getFirst().getValue();
 
         assertThat(caseNotes.get().size()).isEqualTo(1);
         assertThat(caseNote.getUser()).isEqualTo("Admin Officer");
